# api/swagger.yaml
@@ -64,10 +64,9 @@ paths:
       - users_auth:
         - "write:users"
         - "read:users"
-      x-swagger-router-controller: "Users"
     post:
       tags:
-      - "developers"
+      - "users"
       summary: "create a new user"
       description: ""
       operationId: "createUser"
@@ -89,7 +88,7 @@ paths:
             $ref: "#/definitions/ApiResponse"
         405:
           description: "Invalid input"
-      x-swagger-router-controller: "Developers"
+
   /teams:
     x-swagger-router-controller: "Users"
     get:
@@ -236,72 +235,6 @@ paths:
         404:
           description: "Team not found"
     
-  /inventory:
-    get:
-      tags:
-      - "developers"
-      summary: "searches inventory"
-      description: "By passing in the appropriate options, you can search for\navailable\
-        \ inventory in the system\n"
-      operationId: "searchInventory"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "searchString"
-        in: "query"
-        description: "pass an optional search string for looking up inventory"
-        required: false
-        type: "string"
-      - name: "skip"
-        in: "query"
-        description: "number of records to skip for pagination"
-        required: false
-        type: "integer"
-        minimum: 0
-        format: "int32"
-      - name: "limit"
-        in: "query"
-        description: "maximum number of records to return"
-        required: false
-        type: "integer"
-        maximum: 50.0
-        minimum: 0
-        format: "int32"
-      responses:
-        200:
-          description: "search results matching criteria"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/InventoryItem"
-        400:
-          description: "bad input parameter"
-      x-swagger-router-controller: "Developers"
-    post:
-      tags:
-      - "admins"
-      summary: "adds an inventory item"
-      description: "Adds an item to the system"
-      operationId: "addInventory"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "inventoryItem"
-        description: "Inventory item to add"
-        required: false
-        schema:
-          $ref: "#/definitions/InventoryItem"
-      responses:
-        201:
-          description: "item created"
-        400:
-          description: "invalid input, object invalid"
-        409:
-          description: "an existing item already exists"
-      x-swagger-router-controller: "Admins"
 securityDefinitions:
   users_auth:
     type: "oauth2"
@@ -316,6 +249,7 @@ securityDefinitions:
     in: "header"
   basicAuth:
     type: "basic"
+    
 definitions:
   User:
     type: "object"
@@ -345,8 +279,7 @@ definitions:
     properties:
       id:
         type: "string"
-        format: "uuid"
-        example: "d290f1ee-6c54-4b01-90e6-d701748f0851"
+        example: "59153f39394d1250dc23f60b"
       name:
         type: "string"
         example: "Excellent Smart Team X"
@@ -422,41 +355,7 @@ definitions:
         type: "string"
       message:
         type: "string"
-  InventoryItem:
-    type: "object"
-    required:
-    - "id"
-    - "manufacturer"
-    - "name"
-    - "releaseDate"
-    properties:
-      id:
-        type: "string"
-        format: "uuid"
-        example: "d290f1ee-6c54-4b01-90e6-d701748f0851"
-      name:
-        type: "string"
-        example: "Widget Adapter"
-      releaseDate:
-        type: "string"
-        format: "int32"
-        example: "2016-08-29T09:12:33.001Z"
-      manufacturer:
-        $ref: "#/definitions/Manufacturer"
-  Manufacturer:
-    required:
-    - "name"
-    properties:
-      name:
-        type: "string"
-        example: "ACME Corporation"
-      homePage:
-        type: "string"
-        format: "url"
-        example: "https://www.acme-corp.com"
-      phone:
-        type: "string"
-        example: "408-867-5309"
+
 responses:
   UnauthorizedError:
     description: "Authentication information is missing or invalid"
